--- a/app/client/index.html
+++ b/app/client/index.html
@@ -2,18 +2,16 @@
 <html>
   <head>
     <title>prototype</title>
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script crossorigin src='https://unpkg.com/react@17/umd/react.development.js'></script>
+    <script crossorigin src='https://unpkg.com/react-dom@17/umd/react-dom.development.js'></script>
+    <script src='script.js'></script>
   </head>
 <body>
+    <button type='button' onclick='getIP()'>click here to find your public IP</button>
     <div id='root'></div>
-    <p>hi</p>
-    <script type='text/babel'>
-    ReactDOM.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('root')
-    );
+    <script type='text/javascript'>
+    //getIP()
+    //ReactDOM.render( /*#__PURE__*/React.createElement("h1", null, ip), document.getElementById('root'))
     </script>
 </body>
 </html>
