basic html page structure and css

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>prototype</title>
-    <script crossorigin src='https://unpkg.com/react@17/umd/react.development.js'></script>
-    <script crossorigin src='https://unpkg.com/react-dom@17/umd/react-dom.development.js'></script>
-    <script src='script.js'></script>
-  </head>
-<body>
-    <button type='button' onclick='getIP()'>click here to find your public IP</button>
-    <div id='root'></div>
-    <script type='text/javascript'>
-    //getIP()
-    //ReactDOM.render( /*#__PURE__*/React.createElement("h1", null, ip), document.getElementById('root'))
-    </script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+    	<title>prototype</title>
+    	<link rel='stylesheet' href='styles.css'>
+    	<script crossorigin src='https://unpkg.com/react@17/umd/react.development.js'></script>
+    	<script crossorigin src='https://unpkg.com/react-dom@17/umd/react-dom.development.js'></script>
+    	<script src='script.js'></script>
+  	</head>
+	<body>
+  		<header>
+    		<h1>Web App Prototype</h1>
+    	</header>
+		<button type='button' onclick='getIP()'>click here to find your public IP</button>  
+    	<div id='root'></div>
+    	<footer>
+      		<p>author: MT</p>
+    	</footer>
+	</body>
 </html>
