added readability formatting for UI of traceroute output on webpage

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -13,15 +13,15 @@
     		<h1>Web App Prototype</h1>
     	</header>
 		<button type='button' onclick="get('ip', displayText, 'showIP')">
-			click here to find your public IP
+			click here to find your public IP address
 		</button>  
     	<p id='showIP'>|</p>
 		<button type='button' onclick="get('port', displayText, 'showPort')">
-			click here to find the public facing port number you are connected to the server with
+			click here to find your port number on this connection
 		</button>
 		<p id ='showPort'>|</p>
 		<button type='button' onclick="get('trace', displayText, 'showTrace')">
-			click here to find the network hops between you and the server
+			click here to see a traceroute from the server to you
 		</button>
 		<p id ='showTrace'>|</p>
     	<footer>
