added github and dockerhub links in footer

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -31,7 +31,10 @@
 		</div>
 
     	<footer>
-      		<p>author: MT</p>
+      		<p>author: MT
+			<nobr>Source Code - Github: <a href = 'https://github.com/MichaelT233/web' target = '_blank'>https://github.com/MichaelT233/web</a></nobr>
+			<nobr>Docker Image - Dockerhub: <a href = 'https://hub.docker.com/repository/docker/michaelt23/web' target = '_blank'>https://hub.docker.com/repository/docker/michaelt23/web</a></nobr>
+			</p>
     	</footer>
 	</body>
 </html>
