added nmap functionality

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -18,6 +18,7 @@
 			<select name = 'select an action' id = 'actions'>
 				<option value = 'fingerprint'>digital fingerprint</option>
 				<option value = 'traceroute'>traceroute</option>
+				<option value = 'map'>map</option>
 			</select>
 			<button type = 'button' onclick="selectCallback()">
 				Submit
