reformatted css and page layout

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -13,10 +13,10 @@
     		<h1>Web App Prototype</h1>
     	</header>
 
-		<div id = 'left'>
+		<div id = 'top'>
 			<label for = 'actions'>Choose an Action</label>
 			<select name = 'select an action' id = 'actions'>
-				<option value = 'fingerprint'>digital fingerprint</option>
+				<option value = 'socket'>socket</option>
 				<option value = 'traceroute'>traceroute</option>
 				<option value = 'map'>map</option>
 			</select>
@@ -25,10 +25,8 @@
 			</button>
 		</div>
 
-		<div id = 'right'>
-			<div id = 'output0'></div>
-			<div id = 'output1'></div>
-			<div id = 'output2'></div>
+		<div id = 'bottom'>
+			<div id = 'output'></div>
 		</div>
 
     	<footer>
