--- a/app/client/index.html
+++ b/app/client/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
     	<title>prototype</title>
-    	<link rel='stylesheet' href='styles.css'>
+    	<link rel='stylesheet' href='style.css'>
     	<script crossorigin src='https://unpkg.com/react@17/umd/react.development.js'></script>
     	<script crossorigin src='https://unpkg.com/react-dom@17/umd/react-dom.development.js'></script>
     	<script src='script.js'></script>
