integrated client side javascript with postgresql api, using node web server as a proxy

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -19,6 +19,7 @@
 				<option value = 'socket'>socket</option>
 				<option value = 'traceroute'>traceroute</option>
 				<option value = 'map'>map</option>
+				<option value = 'db'>db</option>
 			</select>
 			<button type = 'button' onclick="selectCallback()">
 				Submit
