added basic routing to web server, restructured filesystem to organize the web pages

--- a/home/index0.html
+++ b/home/index0.html
@@ -16,9 +16,6 @@
 		<div id = 'top'>
 			<label for = 'actions'>Choose an Action</label>
 			<select name = 'select an action' id = 'actions'>
-				<option value = 'socket'>socket</option>
-				<option value = 'traceroute'>traceroute</option>
-				<option value = 'map'>map</option>
 				<option value = 'db'>db</option>
 			</select>
 			<button type = 'button' onclick="selectCallback()">
@@ -34,6 +31,7 @@
       		<p>author: MT
 			<nobr>Source Code - Github: <a href = 'https://github.com/MichaelT233/web' target = '_blank'>https://github.com/MichaelT233/web</a></nobr>
 			<nobr>Docker Image - Dockerhub: <a href = 'https://hub.docker.com/repository/docker/michaelt23/web' target = '_blank'>https://hub.docker.com/repository/docker/michaelt23/web</a></nobr>
+			<nobr><a href='/route'>route test</a></nobr>
 			</p>
     	</footer>
 	</body>
