removed old testing code

--- a/testRoute/index1.html
+++ b/testRoute/index1.html
@@ -10,22 +10,10 @@
   	</head>
 	<body>
   		<header>
-    		<h1>Route</h1>
+    		<h1>Route Test</h1>
     	</header>
 
-		<div id = 'top'>
-			<label for = 'actions'>Choose an Action</label>
-			<select name = 'select an action' id = 'actions'>
-				<option value = 'db'>db</option>
-			</select>
-			<button type = 'button' onclick="selectCallback()">
-				Submit
-			</button>
-		</div>
-
-		<div id = 'bottom'>
-			<div id = 'output'></div>
-		</div>
+		<button type = 'button' onclick="get('db', 'output')">DB_Test</button>
 
     	<footer>
       		<p>author: MT
