--- a/home/index0.html
+++ b/home/index0.html
@@ -13,19 +13,7 @@
     		<h1>Web App Prototype</h1>
     	</header>
 
-		<div id = 'top'>
-			<label for = 'actions'>Choose an Action</label>
-			<select name = 'select an action' id = 'actions'>
-				<option value = 'db'>db</option>
-			</select>
-			<button type = 'button' onclick="selectCallback()">
-				Submit
-			</button>
-		</div>
-
-		<div id = 'bottom'>
-			<div id = 'output'></div>
-		</div>
+		<button type = 'button' onclick="get('db', 'output')">DB_Test</button>
 
     	<footer>
       		<p>author: MT
