--- a/home/index0.html
+++ b/home/index0.html
@@ -13,19 +13,20 @@
             <div id="header">
                 <h1>Web App Prototype</h1>
                 <select>
-                    <option value='cart'>Cart</option>
+                    <option value='menu'>Menu</option>
                     <option value='about'>About</option>
+                    <option value='cart'>Cart</option>
                 </select>
             </div>
     	</header>
         <div id="store_view">
-		<button type = 'button' onclick="get('db', 'output')">DB_Test</button>
+		<button type = 'button' onclick="get('db', null)">Database Test</button>
         </div>
     	<footer>
       		<p>author: MT
 			<nobr>Source Code - Github: <a href = 'https://github.com/MichaelT233/web' target = '_blank'>https://github.com/MichaelT233/web</a></nobr>
 			<nobr>Docker Image - Dockerhub: <a href = 'https://hub.docker.com/repository/docker/michaelt23/web' target = '_blank'>https://hub.docker.com/repository/docker/michaelt23/web</a></nobr>
-			<nobr><a href='/route'>route test</a></nobr>
+			<nobr><a href='/about'>about route test</a></nobr>
 			</p>
     	</footer>
 	</body>
