--- a/home/index0.html
+++ b/home/index0.html
@@ -10,7 +10,7 @@
   	</head>
 	<body>
   		<header>
-            <div id="header">
+            <div id="head">
                 <h1>Web App Prototype</h1>
                 <select>
                     <option value='menu'>Menu</option>
