--- a/home/index0.html
+++ b/home/index0.html
@@ -20,7 +20,16 @@
             <h1>Web App Prototype</h1>
     	</header>
         <div id="store_view">
-		<button type = 'button' onclick="get('db', null)">Database Test</button>
+		    <button type = 'button' onclick="get('db', null)">Database Test</button>
+            <div class="store_item">
+                <h2>Product Name</h2>
+                <img src="img_test.jpg" alt="test image" class="product_image">
+                <p>Product Price</p>
+                <p>Product Description</p>
+                <label for="quantity">Qty:</label>
+                <input type="number" name="quantity" min="1">
+                <button type="button">Add to Cart</button>
+            </div>
         </div>
     	<footer>
       		<p>author: MT</p>
