abstracted ajax json requests on client side

--- a/home/index0.html
+++ b/home/index0.html
@@ -18,9 +18,10 @@
                 </div>
             </div>
             <h1>Web App Prototype</h1>
+            <input type="text" id="search">
     	</header>
         <div id="store_view">
-		    <button type = 'button' onclick="get('db', null)">Database Test</button>
+		    <button type = 'button' onclick="loadProducts()">Database Test</button>
         </div>
     	<footer>
       		<p>author: MT</p>
