--- a/home/index0.html
+++ b/home/index0.html
@@ -10,6 +10,7 @@
     	<script crossorigin src='https://unpkg.com/react-dom@17/umd/react-dom.development.js'></script>
         <!--local scripts-->
     	<script src='script.js'></script>
+        <script src='react.js'></script>
   	</head>
 	<body>
         <!--floating header with site nav menu and search bar-->
