--- a/html/store.html
+++ b/html/store.html
@@ -17,10 +17,10 @@
   		<header>
             <!--dropdown menu component, used for site nav, displays on mouse hover-->
             <div class="dropdown">
-                <h1>Menu</h1>
+                <img src="images/menu_bar.png" id="menu_icon">
                 <div class="dropdown-content">
-                    <p><a href='/cart'>Cart</a></p>
-                    <p><a href='/about'>About</a></p>
+                    <a href='/cart'><h2>Cart</h2></a>
+                    <a href='/about'><h2>About</h2></a>
                 </div>
             </div>
             <h1>Web App Prototype</h1>
