--- a/html/store.html
+++ b/html/store.html
@@ -19,6 +19,11 @@
             <div class="dropdown">
                 <img src="images/menu_bar.png" id="menu_icon">
                 <div class="dropdown-content">
+                    <a href='/link0'><h2>link0</h2></a>
+                    <a href='/link1'><h2>link1</h2></a>
+                    <a href='/link2'><h2>link2</h2></a>
+                    <a href='/link3'><h2>link3</h2></a>
+                    <a href='/link4'><h2>link4</h2></a>
                     <a href='/cart'><h2>Cart</h2></a>
                     <a href='/about'><h2>About</h2></a>
                 </div>
@@ -33,8 +38,8 @@
         <!--non-floating footer for information and external links-->
     	<footer>
       		<p>author: MT</p>
-			<p>Source Code - Github: <a href = 'https://github.com/MichaelT233/web' target = '_blank'>https://github.com/MichaelT233/web</a></p>
-			<p>Docker Image - Dockerhub: <a href = 'https://hub.docker.com/repository/docker/michaelt23/web' target = '_blank'>https://hub.docker.com/repository/docker/michaelt23/web</a></p>
+			<p>Source Code - <a href = 'https://github.com/MichaelT233/web' target = '_blank'>Github</a></p>
+			<p>Docker Image - <a href = 'https://hub.docker.com/repository/docker/michaelt23/web' target = '_blank'>Dockerhub</a></p>
     	</footer>
 	</body>
 </html>
