develop responsive design for mobile

--- a/html/store.html
+++ b/html/store.html
@@ -19,12 +19,12 @@
             <div class="dropdown">
                 <img src="images/menu_bar.png" id="menu_icon">
                 <div class="dropdown-content">
-                    <a href='/link0'><h2>link0</h2></a>
-                    <a href='/link1'><h2>link1</h2></a>
-                    <a href='/link2'><h2>link2</h2></a>
-                    <a href='/link3'><h2>link3</h2></a>
-                    <a href='/link4'><h2>link4</h2></a>
-                    <a href='/cart'><h2>Cart</h2></a>
+                    <a href='/about'><h2>link0</h2></a>
+                    <a href='/about'><h2>link1</h2></a>
+                    <a href='/about'><h2>link2</h2></a>
+                    <a href='/about'><h2>link3</h2></a>
+                    <a href='/about'><h2>link4</h2></a>
+                    <a href='/about'><h2>Cart</h2></a>
                     <a href='/about'><h2>About</h2></a>
                 </div>
             </div>
