change cart cookie implementation to window.localStorage

--- a/html/store.html
+++ b/html/store.html
@@ -12,7 +12,7 @@
     	<script src='bundle.js'></script>
   	</head>
     <!--once body has finished loading call js function to load products into store from database-->
-	<body onload="loadProducts()">
+	<body onload="load_all()">
         <!--floating header with site nav menu and search bar-->
   		<header>
             <!--dropdown menu component, used for site nav, displays on mouse hover-->
