create cart link icon

--- a/html/store.html
+++ b/html/store.html
@@ -24,10 +24,14 @@
                     <a href='/cart'><h2>link2</h2></a>
                     <a href='/cart'><h2>link3</h2></a>
                     <a href='/cart'><h2>link4</h2></a>
-                    <a href='/cart'><h2>cart</h2></a>
                 </div>
             </div>
-            <h1>Web App Prototype</h1>
+            <a href ="/">
+                <h1>Web App Prototype</h1>
+            </a>
+            <a href="/cart">
+                <img src="images/cart.png" id="cart_icon">
+            </a>
             <!--search bar to be used for searching product names-->
             <input type="text" id="search_bar" placeholder="Search Products">
     	</header>
