add total price and proceed to checkout component

--- a/html/cart.html
+++ b/html/cart.html
@@ -35,6 +35,8 @@
             <!--search bar to be used for searching product names-->
             <input type="text" id="search_bar" placeholder="Search Products">
     	</header>
+        <div id="head_space"></div>
+        <div id="cart_head"></div>
         <!--viewport for all store items-->
         <div id="store_view">
         </div>
