--- a/html/store.html
+++ b/html/store.html
@@ -35,6 +35,7 @@
             <!--search bar to be used for searching product names-->
             <input type="text" id="search_bar" placeholder="Search Products">
     	</header>
+        <div id="head_space"></div>
         <!--viewport for all store items-->
         <div id="store_view">
         </div>
