--- a/html/cart.html
+++ b/html/cart.html
@@ -12,7 +12,7 @@
     	<script src='bundle.js'></script>
   	</head>
     <!--once body has finished loading call js function to load products into store from database-->
-	<body onload="loadCart()">
+	<body onload="cart.load()">
         <!--floating header with site nav menu and search bar-->
   		<header>
             <!--dropdown menu component, used for site nav, displays on mouse hover-->
