--- a/html/store.html
+++ b/html/store.html
@@ -1,21 +1,17 @@
-<!--root URL/home page -->
+<!--home page -->
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
     	<title>prototype</title>
     	<link rel='stylesheet' href='style.css'>
-        <!--react libraries-->
     	<script crossorigin src='https://unpkg.com/react@17/umd/react.development.js'></script>
     	<script crossorigin src='https://unpkg.com/react-dom@17/umd/react-dom.development.js'></script>
-        <!--local scripts-->
     	<script src='webClient.js'></script>
   	</head>
-    <!--once body has finished loading call js function to load products into store from database-->
+    <!--call function to load all products-->
 	<body onload="store.loadAll()">
-        <!--floating header with site nav menu and search bar-->
   		<header>
-            <!--dropdown menu component, used for site nav, displays on mouse hover-->
             <div class="dropdown">
                 <img src="images/menu_bar.png" id="menuIcon">
                 <div class="dropdownContent">
@@ -32,14 +28,11 @@
             <a href="/cart">
                 <img src="images/cart.png" id="cartIcon">
             </a>
-            <!--search bar to be used for searching product names-->
             <input type="text" id="searchBar" placeholder="Search Products">
     	</header>
         <div id="headSpace"></div>
-        <!--viewport for all store items-->
-        <div id="productView">
+        <div id="mainView">
         </div>
-        <!--non-floating footer for information and external links-->
     	<footer>
       		<p>author: MT</p>
 			<p>Source Code - <a href = 'https://github.com/MichaelT233/web' target = '_blank'>Github</a></p>
