add search bar and product category functionality

--- a/html/cart.html
+++ b/html/cart.html
@@ -15,11 +15,10 @@
             <div class="dropdown">
                 <img src="images/menu_bar.png" id="menuIcon">
                 <div class="dropdownContent">
-                    <a href='/cart'><h2>link0</h2></a>
-                    <a href='/cart'><h2>link1</h2></a>
-                    <a href='/cart'><h2>link2</h2></a>
-                    <a href='/cart'><h2>link3</h2></a>
-                    <a href='/cart'><h2>link4</h2></a>
+                    <h2 onclick="store.loadCategory('category0')">category0</h2>
+                    <h2 onclick="store.loadCategory('category1')">category1</h2>
+                    <h2 onclick="store.loadCategory('category2')">category2</h2>
+                    <h2 onclick="store.loadCategory('category3')">category3</h2>
                 </div>
             </div>
             <a href ="/">
