fix display of navigation menu

--- a/html/cart.html
+++ b/html/cart.html
@@ -12,9 +12,9 @@
     <!--call function to load cart products-->
 	<body onload="cart.load()">
   		<header>
-            <div class="dropdown">
+            <div id="dropdown">
                 <img src="images/menu_bar.png" id="menuIcon">
-                <div class="dropdownContent">
+                <div id="dropdownContent">
                     <h2 onclick="store.loadCategory('category0')">category0</h2>
                     <h2 onclick="store.loadCategory('category1')">category1</h2>
                     <h2 onclick="store.loadCategory('category2')">category2</h2>
