--- a/html/store.html
+++ b/html/store.html
@@ -13,7 +13,7 @@
 	<body>
   		<header>
             <div id="dropdown">
-                <img src="images/menu_bar.png" id="menuIcon" onclick="document.getElementById('dropdownContent').className = 'dropdownContentOn'">
+                <img src="images/menu_bar.png" id="menuIcon" onclick="store.displayDropdown()">
                 <div id="dropdownContent" class="dropdownContentOff" onclick="document.getElementById('dropdownContent').className = 'dropdownContentOff'">
                     <h2 class="dropdownItem" onclick="store.loadCategory('category0')">category0</h2>
                     <h2 class="dropdownItem" onclick="store.loadCategory('category1')">category1</h2>
@@ -30,6 +30,7 @@
             <input type="text" id="searchBar" placeholder="Search Products" onchange="store.loadSearch()">
     	</header>
         <div id="headSpace"></div>
+        <div id="productHead"></div>
         <div id="mainView">
         </div>
     	<footer>
