--- a/server/core/gateway/public/index.html
+++ b/server/core/gateway/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/js/client.js"></script>
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Web App</title>
+    <title>Michael Thiele</title>
     </head>
     <body>
         <div id="root"></div>
