--- a/server/gateway/public/index.html
+++ b/server/gateway/public/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="title" property="og:title" content="Imitation E-Commerce Web Application">
+    <meta name="description" property="og:description" content="Full-stack web application I built to learn and showcase my abilities">
+    <meta name="image" property="og:image" content="https://michael-thiele-app.com/preview.png">
+    <meta name="author" content="Michael Thiele">
+    <meta property="og:type" content="website">
     <script src="/js/client.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Michael Thiele</title>
+    <title>Imitation E-Commerce Web Application</title>
     </head>
     <body>
         <div id="root"></div>
