--- a/server/gateway/public/index.html
+++ b/server/gateway/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" property="og:title" content="Imitation E-Commerce Web Application">
-    <meta name="description" property="og:description" content="Full-stack web application I built to learn and showcase my abilities">
+    <meta name="description" property="og:description" content="Hobby project">
     <meta name="image" property="og:image" content="https://michael-thiele-app.com/preview.png">
     <meta name="author" content="Michael Thiele">
     <meta property="og:type" content="website">
